remctl (3.18-5) unstable; urgency=medium

  * Adjust the test suite for different diagnostics in PCRE 10.47. Thanks,
    Matthew Vernon. (Closes: #1119871)
  * Update debian/watch to version 5.
  * Remove obsolete Rules-Requires-Root: no control field.

 -- Russ Allbery <rra@debian.org>  Sat, 01 Nov 2025 09:29:10 -0700

remctl (3.18-4) unstable; urgency=medium

  * Adjust the test suite for different Getopt::Long diagnostics in Perl
    5.42. Thanks, Niko Tyni. (Closes: #1111883)
  * Update upstream signing key.

 -- Russ Allbery <rra@debian.org>  Mon, 08 Sep 2025 21:41:03 -0700

remctl (3.18-3) unstable; urgency=medium

  * Add perl-xs-dev to dependencies since this package builds an XS
    module. This is required for cross-building and eventually may be
    required if libcrypt-dev is separated from libc6-dev. Thanks, Helmut
    Grohne. (Closes: #1102874)
  * Update standards version to 4.7.2 (no changes required).

 -- Russ Allbery <rra@debian.org>  Sat, 12 Apr 2025 10:54:15 -0700

remctl (3.18-2) unstable; urgency=medium

  [ Russ Allbery ]
  * Incorporate 64-bit time_t transition changes from NMU.
  * Avoid comment markers in EXTRA_DIST because Automake now warns about
    them, which causes build failures due to -Werror. (Closes: #1094528)
  * Build-depend on pkgconf rather than pkg-config.
  * Adapt to new Ruby packaging standards.
    - Use ${ruby:Depends} instead of a manual Ruby dependency.
    - Override several Lintian tags that appear to be wrong.
  * Drop dh_autoreconf override in debian/rules since --as-needed is now
    the default in Debian.
  * Convert to the dgit-maint-debrebase workflow and add a
    debian/README.source file documenting that workflow.
  * Update Lintian overrides to drop a now-unneeded override and to adapt
    to the new syntax for extra information in tags.
  * Update standards version to 4.7.0 (no changes required).
  * Update upstream signing key.

  [ Debian Janitor ]